--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,10 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 
     <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-firestore.js"></script> 
+    <script src="/node_modules/firebase/firebase-app.js"></script>
+    <script src="/node_modules/firebase/firebase-auth.js"></script>
+    <script src="/node_modules/firebase/firebase-firestore.js"></script>
     
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
