--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,12 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 
-    <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-firestore.js"></script> 
-    <script src="/node_modules/firebase/firebase-app.js"></script>
-    <script src="/node_modules/firebase/firebase-auth.js"></script>
-    <script src="/node_modules/firebase/firebase-firestore.js"></script>
+    <!-- <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-database.js"></script>  -->
     
+    <!-- <script src="https://www.gstatic.com/firebasejs/5.7.0/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.7.0/firebase-firestore.js"></script> -->
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
